--- a/Web.config
+++ b/Web.config
@@ -10,7 +10,7 @@
     <system.web>
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
-      <pages theme="Theme1"/>
+      <pages theme="DefaultTheme"/>
     </system.web>
 
 </configuration>
