--- a/Web.config
+++ b/Web.config
@@ -1,40 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
+
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
+
 <configuration>
-  <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework"
-      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-      requirePermission="false"/>
-  </configSections>
-  <system.web>
-    <compilation debug="true" targetFramework="4.5">
-      <assemblies>
-        <add assembly="System.Data.OracleClient, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-      </assemblies>
-    </compilation>
-    <httpRuntime targetFramework="4.5"/>
-    <pages theme="DefaultTheme"/>
-  </system.web>
-  <appSettings>
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
-  </appSettings>
-  <connectionStrings>
-    <add name="AzureRecipeBookDB"
-      connectionString="Data Source=comp229-adv-web.database.windows.net;Initial Catalog=RecipeBook;Persist Security Info=True;User ID=ken;Password=sifter_2486#"/>
-    <add name="LocalRecipeDB" connectionString="Data Source=KENS-LAPTOP\SQLEXPRESS;Initial Catalog=RecipeBook;Integrated Security=True"/>
-  </connectionStrings>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="v13.0"/>
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
-    </providers>
-  </entityFramework>
+
+    <system.web>
+      <compilation debug="true" targetFramework="4.5" />
+      <httpRuntime targetFramework="4.5" />
+      <pages theme="DefaultTheme"/>
+    </system.web>
+
 </configuration>
